--- a/FAV HOBBIES/AboutMe.html
+++ b/FAV HOBBIES/AboutMe.html
@@ -8,15 +8,21 @@
 </head>
 
 <body>
+	<div class="header">
 	<h1>About Me!</h1>
 
             <div class ="menu">
                 <a href="FAV HOBBIES/Hobbies.html">Hobbies</a>
             </div>
 
-
+</div>
         
-        <h2>Hello. I am Vidhi Nair. I am in Year 9 and my favourite lessons are Computer Science, Biology, Chemistry and Maths. When I grow up I either want to be a sofware engineer or a doctor. I love .</h2>
-       
+        <h2>Hello. I am Vidhi Nair. I am in Year 9 and my favourite lessons are Computer Science, Biology, Chemistry and Maths. I would like to be a sofware engineer or something is the science field.. I love .</h2>
+       <div class="grid">
+	<div class = "item">
+                 <img src="thumbnail_image2.jpg" width=365 height=365/>
+                 <p>This is me!&nbsp;</p>
+            </div>
+</div>
 </body>
 </html>
